# tdfextractor

./: .gitignore  CHANGES  CHANGLOG.md  README.md  benchmark_workers.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
src/tdfextractor/: __init__.py  cli_args.py  constants.py  mgf_exctractor.py  ms2_extractor.py  string_templates.py  utils.py
tdfextractor/: constants.py  ms2_extractor.py  string_templates.py  utils.py
test/: performance.py  test_ms2_extractor.py
tests/: test_ms2_extractor.py
tests/data/200ngHeLaPASEF_1min.d/: analysis.tdf
