[build-system]
requires = ["setuptools"]

[project]
name = "tdfextractor"
dynamic = ["version"]
description = "extract ms2 files from bruker d folder"
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"},
]
dependencies = [
    "tdfpy==0.1.7",
    "serenipy==0.2.6",
    "tqdm"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "tdfextractor.__version__"}


[tool.pylint]
max-line-length = 120
fail-under = 9.5